# 7Lnew

./: .gitignore  README.md  binary_message.txt  bucket_contents.md
contracts/: http.md  (+1 more)
impossible-tower/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile.checker  Dockerfile.demo  Dockerfile.generator  LICENSE  README.md  cloudbuild-checker.yaml  cloudbuild-demo.yaml  cloudbuild-generator.yaml  pyproject.toml
impossible-tower/.github/workflows/: ci.yml
impossible-tower/dataset_specs/: proof.schema.json  sample.schema.json  scene_graph.schema.json
impossible-tower/docs/: api.md  architecture.mmd  data-card.md  evals.md  getting-started.md  milestones.md  model-card.md  paper.md  secrets.md
impossible-tower/docs/datasets/: test-run-2025-09-19.md
impossible-tower/docs/eval_harness/: README.md
impossible-tower/docs/eval_results/: eval-20250919-121706.md
impossible-tower/infra/scripts/: generate_bucket_contents.py  list_bucket.py  list_bucket.sh  list_bucket_contents.py
impossible-tower/scripts/: deploy_checker.sh  deploy_demo.sh  run_eval.sh  run_generator.sh  synth_100.sh
impossible-tower/src/checker/: service.py  z3_rules.py
impossible-tower/src/data_gen/: constraints.py  make_dataset.py  pybullet_worlds.py  render.py  scene_graph.py
impossible-tower/src/demo/: app.py
impossible-tower/src/impossible_tower.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
impossible-tower/src/model/: formatter.py  vertex_client.py
impossible-tower/tests/: test_check_api.py  test_constraints.py  test_scene_graph.py  test_vertex_client.py
(+32 files in other folders)
